--- a/changePassword.html
+++ b/changePassword.html
@@ -3,6 +3,7 @@
 <head>
       <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/vote.png" />
     <title>I-Voted Admin</title>
 	<!-- BOOTSTRAP STYLES-->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -27,6 +28,7 @@
      margin-left: 70px;
      margin-top: 10px;
      background-color: #74ced3;
+     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    }
 
    .myButton:hover{
@@ -63,7 +65,7 @@
 
 
                   <li>
-                      <a href="index.html" ><i class="fa fa-desktop "></i>Dashboard <span id="spanID6"class="badge" style="background-color:red"></span></a>
+                      <a href="mainElections.html" ><i class="fa fa-desktop "></i>Dashboard <span id="spanID6"class="badge" style="background-color:red"></span></a>
                   </li>
                   <li>
                      <a href="allUsers.html"><i class="fa fa-users "></i>Users</a>
