--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -4,6 +4,7 @@
 	<title>Reset Password</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/img/vote.png" />
 <!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="assets/img/icons/elec1.png"/>
 <!--===============================================================================================-->
@@ -88,20 +89,44 @@
 
   <script>
   function resetPass(){
+		var adminMailler = [];
+		var adminMi = false;
+
     var auth = firebase.auth();
     var emailAddress = document.getElementById("email").value
 
-  if(emailAddress == ""){
-    alert("Please enter an e-mail");
-  }else{
-    auth.sendPasswordResetEmail(emailAddress).then(function() {
-      alert("E-mail send your inbox.");
-    }).catch(function(error) {
-      alert("Error! Please try again.");
-    });
-  }
+		firebase.database().ref("Admin").on("child_added",function(adminSnap1){
+			firebase.database().ref("Admin").child(adminSnap1.key).on("value",function(adminSnap2){
+				if(emailAddress == ""){
+			    alert("Please enter an e-mail");
+			  }else{
+				 	if(validateEmail(emailAddress)){
+						if(adminSnap2.val().email == emailAddress){
+							auth.sendPasswordResetEmail(emailAddress).then(function() {
+					      alert("E-mail send your inbox.");
+					    }).catch(function(error) {
+					      alert("Error! Please try again.");
+					    });
+						}else{
+							adminMi = true;
+						}
+
+					}else{
+						alert("E-mail format is incorrect. Please enter the correct e-mail.");
+				  }
+				}
+			});
+		});
+		if(adminMi){
+			alert("This is not a admin e-mail.");
+		}
 
   }
+
+	function validateEmail(email) {
+    var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+    return re.test(String(email).toLowerCase());
+	}
 
 
   </script>
